# SpannerViewer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: AppIcon.icns
scripts/: build-dmg.sh  make-icon.py
src/: app.rs  csvview.rs  k8s.rs  main.rs  monitoring.rs  query.rs
