[package]
name = "spanner-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui_plot = "0.29"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gcp_auth = "0.12"
anyhow = "1"
# 依存ツリーに aws-lc-rs と ring が両方あるため、rustls の既定プロバイダを明示選択する
rustls = "0.23"

# 負荷生成バイナリ (src/bin/loadgen.rs) 用
gcloud-spanner = "1.8"
uuid = { version = "1", features = ["v4"] }

# セットアップバイナリ (src/bin/setup.rs) 用 — Admin API の型とエラーコード
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3", features = ["spanner"] }
google-cloud-gax = { package = "gcloud-gax", version = "1" }
