[package]
name = "spanner-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.35"
egui_plot = "0.36"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "sync", "process", "io-util", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gcp_auth = "0.12"
anyhow = "1"
# CSV の文字コード変換（Shift-JIS/CP932 など）
encoding_rs = "0.8"
# 証跡レポートのスクリーンショット PNG 保存用
image = { version = "0.25", default-features = false, features = ["png"] }
# 依存ツリーに aws-lc-rs と ring が両方あるため、rustls の既定プロバイダを明示選択する
rustls = "0.23"
# 巨大 CSV ビューア: メモリマップ + 高速な改行スキャン（全体をRAMに載せない）
memmap2 = "0.9"
memchr = "2"

# 負荷生成バイナリ (src/bin/loadgen.rs) 用
gcloud-spanner = "1.8"
uuid = { version = "1", features = ["v4"] }

# セットアップバイナリ (src/bin/setup.rs) 用 — Admin API の型とエラーコード
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3", features = ["spanner"] }
google-cloud-gax = { package = "gcloud-gax", version = "1" }

[dev-dependencies]
# UI の操作テスト＋ヘッドレス描画（PNG スナップショット）用
egui_kittest = { version = "0.35", features = ["wgpu", "snapshot", "eframe"] }
